update deprecated method calls